Removed EXTENDED_ADVANTAGES #ifdefs. Same reason as the last two commits, admins can choose or not to use them by not setting them on players.
git-svn-id: svn://svn.code.sf.net/p/btonline-btech/code@238 e60b412a-5d77-420b-80c2-6cef64185626

--- a/Makefile.in
+++ b/Makefile.in
@@ -211,6 +211,7 @@ clean:
 
 distclean: clean
 	rm -rf .depend Makefile config.status config.log
+	rm -rf src/autoconf*
 
 slave src/slave: src/slave.c
 	$(CC) $(ALLFLAGS) -o src/slave src/slave.c
