Adding in .svnignore stuff to strip bunch of un-versioned files from 'svn status'. For some reason the src/autoconf stuff is still showing though.
git-svn-id: svn://svn.code.sf.net/p/btonline-btech/code@239 e60b412a-5d77-420b-80c2-6cef64185626

--- a/.svnignore
+++ b/.svnignore
@@ -9,4 +9,11 @@ cscope.in.out
 cscope.out
 cscope.po.out
 buildnum.data
-
+autoconf*
+game
+game.run
+autom4te.cache
+.project
+.cdtproject
+config.status
+.depend
