Set the minor revision number in src/patchlevel.h from now on.
git-svn-id: svn://svn.code.sf.net/p/btonline-btech/code@258 e60b412a-5d77-420b-80c2-6cef64185626

--- a/configure.in
+++ b/configure.in
@@ -2,7 +2,7 @@
 # Process this file with autoconf to produce a configure script.
 
 AC_PREREQ(2.53)
-AC_INIT([BtOnline-BTechMux], [0.6.0-rc1])
+AC_INIT([BtOnline-BTechMux], [0.6])
 AC_CONFIG_HEADERS([src/autoconf.h])
 
 # Checks for programs.
