some debugging code.
we now have make debug and make release

it should jive nicely.

debug versions include their svn revision

-M

git-svn-id: svn://svn.code.sf.net/p/btonline-btech/code@269 e60b412a-5d77-420b-80c2-6cef64185626

--- a/Makefile.dist
+++ b/Makefile.dist
@@ -1,5 +1,6 @@
 configure: src/autoconf.h.in configure.in
 	autoconf
+	@echo "Please run ./configure with your intended build options."
 
 src/autoconf.h.in: 
 	autoheader
