Added an install-debug target.
git-svn-id: svn://svn.code.sf.net/p/btonline-btech/code@278 e60b412a-5d77-420b-80c2-6cef64185626

--- a/Makefile.in
+++ b/Makefile.in
@@ -184,6 +184,9 @@ TARGETS = src/netmux$(OBJSUFFIX) src/mkindx$(OBJSUFFIX) src/unsplit$(OBJSUFFIX) 
 debug:
 	@DEBUG=1 make all
 
+install-debug:
+	@DEBUG=1 make install
+
 release all: Makefile $(TARGETS)
 
 Makefile: Makefile.dist configure.in Makefile.in
