Eradicated last of the BT_ENABLED define poop.
git-svn-id: svn://svn.code.sf.net/p/btonline-btech/code@355 e60b412a-5d77-420b-80c2-6cef64185626

--- a/Makefile.in
+++ b/Makefile.in
@@ -19,7 +19,7 @@ CFLAGS        += -O3
 OBJSUFFIX      =
 endif
 
-BUILDFLAGS     = -DMEMORY_BASED -DBT_ENABLED
+BUILDFLAGS     = -DMEMORY_BASED
 
 ALLFLAGS       = $(CFLAGS) $(INCLUDES) $(CPPFLAGS) $(LDFLAGS) $(BUILDFLAGS)
 
