finally removed the old, crappy hash code
git-svn-id: svn://svn.code.sf.net/p/btonline-btech/code@374 e60b412a-5d77-420b-80c2-6cef64185626

--- a/Makefile.in
+++ b/Makefile.in
@@ -188,6 +188,9 @@ debug:
 install-debug:
 	@DEBUG=1 make install
 
+mudflap:
+	$(CC) -g3 -DDEBUG -DSVN_REVISION="\"`svnversion .`\"" $(ALLFLAGS) $(VERSION_FLAGS) -fmudflap -o src/netmux.mudflap $(ALLSRCS) src/version.c $(LIBS) -lmudflap
+
 release all: Makefile $(TARGETS)
 
 Makefile: Makefile.dist configure.in Makefile.in
