KM hits -DMEMORY_BASED for 69 points in the nuts.
git-svn-id: svn://svn.code.sf.net/p/btonline-btech/code@376 e60b412a-5d77-420b-80c2-6cef64185626

--- a/Makefile.in
+++ b/Makefile.in
@@ -19,7 +19,7 @@ CFLAGS        += -g -O3
 OBJSUFFIX      =
 endif
 
-BUILDFLAGS     = -DMEMORY_BASED
+BUILDFLAGS     = 
 
 ALLFLAGS       = $(CFLAGS) $(INCLUDES) $(CPPFLAGS) $(LDFLAGS) $(BUILDFLAGS)
 
