nrbtab fix added db_xml
git-svn-id: svn://svn.code.sf.net/p/btonline-btech/code@377 e60b412a-5d77-420b-80c2-6cef64185626

--- a/Makefile.in
+++ b/Makefile.in
@@ -40,6 +40,7 @@ MUX_OBJECTS    = src/boolexp.o     \
                  src/cque.o        \
                  src/create.o      \
                  src/db.o          \
+				 src/db_xml.o	   \
                  src/db_rw.o       \
                  src/dllist.o      \
                  src/eval.o        \
