--- a/Makefile.in
+++ b/Makefile.in
@@ -72,6 +72,7 @@ MUX_OBJECTS    = src/boolexp.o     \
                  src/rbtab.o	   \
 				 src/rob.o         \
                  src/set.o         \
+				 src/signal.o	   \
                  src/speech.o      \
 @SQLCHILD@
                  src/stringutil.o  \
