added some of darrenb's patches.
modified raw input buffer to be static, bound to connection descriptor
added a waitpid(-1, status, WNOHANG) to pick up zombies
forced the segfault handler to abort

git-svn-id: svn://svn.code.sf.net/p/btonline-btech/code@477 e60b412a-5d77-420b-80c2-6cef64185626

--- a/Makefile.in
+++ b/Makefile.in
@@ -211,7 +211,7 @@ install: $(TARGETS)
 	    exit 1; \
 	fi
 	if [ ! -d game.run ]; then \
-	    cp -a game game.run || exit 1; \
+	    cp -pPR game game.run || exit 1; \
 	    chmod -R u+w game.run || exit 1; \
 	fi
 	if [ ! -d game.run/bin ]; then \
