Added db_xdr.h to allow for using xdr stuff outside of db_xdr.c
Added some initial opening/closing of hcode.xdr.db
file.

git-svn-id: svn://svn.code.sf.net/p/btonline-btech/code@504 e60b412a-5d77-420b-80c2-6cef64185626

--- a/Makefile.in
+++ b/Makefile.in
@@ -40,10 +40,11 @@ MUX_OBJECTS    = src/boolexp.o     \
                  src/cque.o        \
                  src/create.o      \
                  src/db.o          \
-				 src/db_xml.o	   \
+                 src/db_xml.o      \
+                 src/db_xdr.o      \
                  src/db_rw.o       \
                  src/dllist.o      \
-				 src/dnschild.o	   \
+                 src/dnschild.o    \
                  src/eval.o        \
                  src/file_c.o      \
                  src/flags.o       \
