Removal of unsplit
Dev crew could not find its usuage at all in the code.

git-svn-id: svn://svn.code.sf.net/p/btonline-btech/code@509 e60b412a-5d77-420b-80c2-6cef64185626

--- a/Makefile.in
+++ b/Makefile.in
@@ -180,7 +180,7 @@ ALLOBJS = $(MISC_OBJECTS) $(EVENT_OBJECTS) $(TREE_OBJECTS) \
 
 ALLSRCS = $(ALLOBJS:.o=.c)
 
-TARGETS = src/netmux$(OBJSUFFIX) src/mkindx$(OBJSUFFIX) src/unsplit$(OBJSUFFIX)
+TARGETS = src/netmux$(OBJSUFFIX) src/mkindx$(OBJSUFFIX)
 
 debug:
 	@DEBUG=1 make all
@@ -238,9 +238,6 @@ distclean: clean cleandep
 
 mkindx$(OBJSUFFIX) src/mkindx$(OBJSUFFIX): src/mkindx.c
 	$(CC) $(ALLFLAGS) -o src/mkindx$(OBJSUFFIX) src/mkindx.c
-
-unsplit$(OBJSUFFIX) src/unsplit$(OBJSUFFIX): src/unsplit.c
-	$(CC) $(ALLFLAGS) -o src/unsplit$(OBJSUFFIX) src/unsplit.c
 
 dbconvert src/dbconvert:
 	echo "dbconvert is no longer supported." && exit 1;
