Added strlcpy() strlcat() to compat. Custom implimentations, to avoid adding BSD license stuff, will use the system provided functions if they are there.
Modified version.c to define a global string called mux_version instead of using snprintf. This is so that we can easily figure out what version we're looking at when we're looking at a corefile or binary. e.g.

murrayma@lithium:~/btmux$ gdb src/netmux.debug
GNU gdb 6.4-debian
Copyright 2005 Free Software Foundation, Inc.
GDB is free software, covered by the GNU General Public License, and you are
welcome to change it and/or distribute copies of it under certain conditions.
Type "show copying" to see the conditions.
There is absolutely no warranty for GDB.  Type "show warranty" for details.
This GDB was configured as "i486-linux-gnu"...Using host libthread_db library "/lib/tls/i686/cmov/libthread_db.so.1".

(gdb) print mux_version
$1 = "BtOnline-BTechMux 0.6.0-rc3+HUD+SQL+ALG DEBUG svn revision 548M 'Fly' build #3 on Fri Jan 27 21:57:45 EST 2006 built by murrayma@lithium.brokenlogic.org"

Moved the mmdb_* routines out into their own files.
Added mmdb_write_string(struct mmdb_t, char *)
Fixed some warnings.

git-svn-id: svn://svn.code.sf.net/p/btonline-btech/code@549 e60b412a-5d77-420b-80c2-6cef64185626

--- a/Makefile.in
+++ b/Makefile.in
@@ -11,7 +11,7 @@ LDFLAGS		   = @LDFLAGS@
 VERSION_FLAGS  = -DMUX_BUILD_DATE="\"`date`\""              \
                  -DMUX_BUILD_NUM="\"`sh src/buildnum.sh`\""
 ifdef DEBUG
-VERSION_FLAGS += -DSVN_REVISION="\"`svnversion .`\""
+VERSION_FLAGS += -DSVN_REVISION="\"`svnversion .`\"" -DMUX_BUILD_USER="\"`whoami`\"" -DMUX_BUILD_HOST="\"`hostname -f`\""
 CFLAGS 	      += -g3 -DDEBUG
 OBJSUFFIX      = .debug
 else
@@ -41,6 +41,7 @@ MUX_OBJECTS    = src/boolexp.o     \
                  src/create.o      \
                  src/db.o          \
 				 src/db_xml.o	   \
+				 src/db_xdr.o	   \
                  src/db_rw.o       \
                  src/dllist.o      \
 				 src/dnschild.o	   \
@@ -59,6 +60,7 @@ MUX_OBJECTS    = src/boolexp.o     \
                  src/match.o       \
                  src/mguests.o     \
                  src/move.o        \
+				 src/mmdb.o		   \
 				 src/nametab.o     \
                  src/netcommon.o   \
 				 src/nrbtab.o      \
