Fix Makefile for move to SF SVN
git-svn-id: svn://svn.code.sf.net/p/btonline-btech/code@691 e60b412a-5d77-420b-80c2-6cef64185626

--- a/Makefile.in
+++ b/Makefile.in
@@ -203,10 +203,10 @@ Makefile: Makefile.dist configure.in Makefile.in
 install: $(TARGETS)
 	if [ ! -d game ]; then \
             echo No game directory, attempting to download one from the Subversion repository.; \
-            svn co http://svn.btmux.com/game/trunk game; \
-            svn co http://svn.btmux.com/maps/trunk game/maps; \
-            svn co http://svn.btmux.com/text/trunk game/text; \
-            svn co http://svn.btmux.com/mechs/trunk game/mechs; \
+            svn co https://svn.sourceforge.net/svnroot/btonline-btech/game/trunk game; \
+            svn co https://svn.sourceforge.net/svnroot/btonline-btech/maps/trunk game/maps; \
+            svn co https://svn.sourceforge.net/svnroot/btonline-btech/text/trunk game/text; \
+            svn co https://svn.sourceforge.net/svnroot/btonline-btech/mechs/trunk game/mechs; \
         fi
 	if [ ! -d game ]; then \
 	    echo No game directory. Please acquire one from http://sourceforge.net/projects/btonline-btech.; \
