--- a/Makefile.in
+++ b/Makefile.in
@@ -53,6 +53,7 @@ MUX_OBJECTS    = src/boolexp.o     \
                  src/game.o        \
                  src/help.o        \
                  src/log.o         \
+		 src/chat.o	   \
 @LOGCACHE@
                  src/look.o        \
                  src/macro.o       \
