Bring us up to 767
66 files changed, 1172 insertions(+), 884 deletions(-)

git-svn-id: svn://svn.code.sf.net/p/btonline-btech/code@771 e60b412a-5d77-420b-80c2-6cef64185626

--- a/Makefile.in
+++ b/Makefile.in
@@ -1,4 +1,4 @@
-#!/usr/bin/make -f
+#!/usr/bin/$(MAKE) $(MAKEFLAGS)-f
 
 CC             = @CC@
 MAKEDEPEND     = @CC@ -MM
@@ -183,10 +183,10 @@ ALLSRCS = $(ALLOBJS:.o=.c)
 TARGETS = src/netmux$(OBJSUFFIX) src/mkindx$(OBJSUFFIX)
 
 debug:
-	@DEBUG=1 make all
+	@DEBUG=1 $(MAKE) $(MAKEFLAGS)all
 
 install-debug:
-	@DEBUG=1 make install
+	@DEBUG=1 $(MAKE) $(MAKEFLAGS)install
 
 mudflap:
 	$(CC) -g3 -DDEBUG -DSVN_REVISION="\"`svnversion .`\"" $(ALLFLAGS) $(VERSION_FLAGS) -fmudflap -o src/netmux.mudflap $(ALLSRCS) src/version.c $(LIBS) -lmudflap
@@ -194,18 +194,18 @@ mudflap:
 release all: Makefile $(TARGETS)
 
 Makefile: Makefile.dist configure.in Makefile.in
-	make -f Makefile.dist clean
-	exec make -f Makefile.dist
+	$(MAKE) $(MAKEFLAGS)-f Makefile.dist clean
+	exec $(MAKE) $(MAKEFLAGS)-f Makefile.dist
 
 # Install copies the 'game' directory to game.run, after trying to get all
 # files from svn. If the svn command fails, we don't really care.
 install: $(TARGETS)
 	if [ ! -d game ]; then \
             echo No game directory, attempting to download one from the Subversion repository.; \
-            svn co http://svn.btmux.com/game/trunk game; \
-            svn co http://svn.btmux.com/maps/trunk game/maps; \
-            svn co http://svn.btmux.com/text/trunk game/text; \
-            svn co http://svn.btmux.com/mechs/trunk game/mechs; \
+            svn co https://svn.sourceforge.net/svnroot/btonline-btech/game/trunk game; \
+            svn co https://svn.sourceforge.net/svnroot/btonline-btech/maps/trunk game/maps; \
+            svn co https://svn.sourceforge.net/svnroot/btonline-btech/text/trunk game/text; \
+            svn co https://svn.sourceforge.net/svnroot/btonline-btech/mechs/trunk game/mechs; \
         fi
 	if [ ! -d game ]; then \
 	    echo No game directory. Please acquire one from http://sourceforge.net/projects/btonline-btech.; \
@@ -234,7 +234,7 @@ cleandep: clean
 	rm -f $(ALLOBJS:%.o=%.d)
 
 distclean: clean cleandep
-	make -f Makefile.dist clean
+	$(MAKE) $(MAKEFLAGS)-f Makefile.dist clean
 
 mkindx$(OBJSUFFIX) src/mkindx$(OBJSUFFIX): src/mkindx.c
 	$(CC) $(ALLFLAGS) -o src/mkindx$(OBJSUFFIX) src/mkindx.c
