--- a/Makefile.in
+++ b/Makefile.in
@@ -35,6 +35,7 @@ MUX_OBJECTS    = src/boolexp.o     \
                  src/commac.o      \
                  src/command.o     \
                  src/compat.o      \
+				 src/comstar.o	   \
                  src/comsys.o      \
                  src/conf.o        \
                  src/cque.o        \
