--- a/configure.in
+++ b/configure.in
@@ -368,5 +368,30 @@ AC_ARG_ENABLE([sql-support],
     ]
 )
 
+AC_MSG_CHECKING([Should we rename the 'help' command to 'muxhelp' [[default=no]]])
+AC_ARG_ENABLE([rename-help],
+    AS_HELP_STRING([--enable-rename-help],
+                   [Move the 'help' command to 'muxhelp' [[default=disabled]]])
+    AS_HELP_STRING([ ], [ ]),
+    [
+        case "${enableval}" in
+            yes)
+		AC_DEFINE([MOVE_HELP], [1], [Should we rename the 'help' command to 'muxhelp'])
+                AC_MSG_RESULT([yes])
+                ;;
+            no)
+                AC_MSG_RESULT([no])
+                ;;
+            *)
+                AC_MSG_ERROR(bad value "${enableval}" for rename-help option)
+                ;;
+        esac    
+    ],  
+    [
+        AC_MSG_RESULT([no])
+    ]
+)
+
+
 AC_CONFIG_FILES([Makefile])
 AC_OUTPUT
