Mersenne Twister randomness. Contributed by CU5 (fiver)
git-svn-id: svn://svn.code.sf.net/p/btonline-btech/code@938 e60b412a-5d77-420b-80c2-6cef64185626

--- a/Makefile.in
+++ b/Makefile.in
@@ -96,6 +96,7 @@ HCODE_OBJECTS =  src/hcode/coolmenu.o        \
                  src/hcode/mechfile.o        \
                  src/hcode/spath.o           \
 				 src/hcode/tick.o			 \
+				 src/hcode/mt19937ar.o			 \
 
 BTECH_OBJECTS  = src/hcode/btech/aero.bomb.o                \
                  src/hcode/btech/aero.move.o                \
