Added a few ugly #ifdef's for small bits of BT/Penn-specific code.  Eventually intend to factor these out into the BTPR library.
git-svn-id: svn://svn.code.sf.net/p/btonline-btech/code@1024 e60b412a-5d77-420b-80c2-6cef64185626

--- a/btech/autoconf.h.in
+++ b/btech/autoconf.h.in
@@ -1,5 +1,11 @@
 /* autoconf.h.in.  Generated from configure.ac by autoheader.  */
 
+/* Use TinyMUX 1.x BTPR layer */
+#undef BTPR_MUX1
+
+/* Use PennMUSH BTPR layer */
+#undef BTPR_PENN
+
 /* Should the advanced econ system be enabled */
 #undef BT_ADVANCED_ECON
 
