--- a/btech/src/Makefile.in
+++ b/btech/src/Makefile.in
@@ -77,9 +77,6 @@ am_libbtech_la_OBJECTS = coolmenu.lo debug.lo events.lo glue.hcode.lo \
 	mech.tech.saverepair.lo mech.tic.lo mech.update.lo \
 	mech.utils.lo mechrep.lo mine.lo pcombat.lo template.lo
 libbtech_la_OBJECTS = $(am_libbtech_la_OBJECTS)
-libbtech_la_LINK = $(LIBTOOL) --tag=CC $(AM_LIBTOOLFLAGS) \
-	$(LIBTOOLFLAGS) --mode=link $(CCLD) $(AM_CFLAGS) $(CFLAGS) \
-	$(libbtech_la_LDFLAGS) $(LDFLAGS) -o $@
 DEFAULT_INCLUDES = -I. -I$(top_builddir)@am__isrc@
 depcomp = $(SHELL) $(top_srcdir)/confutil/depcomp
 am__depfiles_maybe = depfiles
@@ -204,16 +201,14 @@ sysconfdir = @sysconfdir@
 target_alias = @target_alias@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-@BTPR_MUX1_TRUE@BTPR_INCLUDE = -I$(top_srcdir)/../include -I$(top_srcdir)/../src
-@BTPR_PENN_TRUE@BTPR_INCLUDE = -I$(btpr_dir)/penn/include -I$(btpr_dir)/include
-@BTPR_PENN_TRUE@BTPR_LFLAGS = -Wl,-Bsymbolic
-@BTPR_PENN_TRUE@BTPR_LIBS = ../btpr/libbtpr.la
 AM_CPPFLAGS = $(BTPR_INCLUDE) -I$(srcdir)/include -I$(srcdir)/btech \
 	-I$(srcdir)/btfi
 
-AM_LDFLAGS = $(BPTR_LFLAGS)
+@BTPR_MUX1_TRUE@BTPR_INCLUDE = -I$(top_srcdir)/../include -I$(top_srcdir)/../src
+@BTPR_PENN_TRUE@BTPR_INCLUDE = -I$(btpr_dir)/penn/include -I$(btpr_dir)/include
+@BTPR_PENN_TRUE@AM_LDFLAGS = -Wl,-Bsymbolic
+@BTPR_PENN_TRUE@BTPR_LIBS = ../btpr/libbtpr.la
 lib_LTLIBRARIES = libbtech.la
-libbtech_la_LDFLAGS = -static
 libbtech_la_SOURCES = coolmenu.c debug.c events.c glue.hcode.c glue.c \
 	glue.scode.c mech.lostracer.c mechfile.c spath.c tick.c mt19937ar.c \
 	btech/aero.bomb.c btech/aero.move.c btech/artillery.c \
@@ -356,7 +351,7 @@ clean-libLTLIBRARIES:
 	  rm -f "$${dir}/so_locations"; \
 	done
 libbtech.la: $(libbtech_la_OBJECTS) $(libbtech_la_DEPENDENCIES) 
-	$(libbtech_la_LINK) -rpath $(libdir) $(libbtech_la_OBJECTS) $(libbtech_la_LIBADD) $(LIBS)
+	$(LINK) -rpath $(libdir) $(libbtech_la_OBJECTS) $(libbtech_la_LIBADD) $(LIBS)
 
 mostlyclean-compile:
 	-rm -f *.$(OBJEXT)
